fix: link vertical-align

--- a/packages/veno-ui/src/components/code/styles/_variables.scss
+++ b/packages/veno-ui/src/components/code/styles/_variables.scss
@@ -2,4 +2,4 @@
 $code-border-radius: 3px !default;
 $code-font-size: 1em !default;
 $code-font-weight: normal !default;
-$code-padding: 2px 8px !default;
+$code-padding: 0 8px !default;
