--- a/packages/veno-ui/src/components/code/styles/code.scss
+++ b/packages/veno-ui/src/components/code/styles/code.scss
@@ -94,7 +94,7 @@
   }
 
   .token.attr-name {
-    color: #a6e22e;
+    color: #690;
   }
 
   .token.tag,
