--- a/packages/veno-ui/src/components/link/styles/link.scss
+++ b/packages/veno-ui/src/components/link/styles/link.scss
@@ -3,6 +3,7 @@
   user-select: auto;
   height: auto;
   min-width: auto;
+  vertical-align: inherit;
 
   &--underline {
     text-decoration: underline currentColor;
